--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "express-winston": "4.2.0",
     "jsonwebtoken": "9.0.1",
     "mongoose": "7.3.2",
+    "validator": "13.9.0",
     "winston": "3.10.0"
   },
   "devDependencies": {
